# SimpleAccumulator

./: .gitignore  CMakeLists.txt
include/Accumulator/: Accumulator.h
include/Calculator/: Calculator.h
include/Client/: Client.h
include/Consol/: Consol.h
include/Divider/: Divider.h
include/File/: File.h
include/Interface/: Interface.h
include/Multiplier/: Multiplier.h
include/Operator/: Operator.h
include/Operator/Accumulator/: Accumulator.h
include/Operator/Divider/: Divider.h
include/Operator/Multiplier/: Multiplier.h
include/Operator/Subtractor/: Subtractor.h
include/Parser/: Parser.h
include/Parser/Consol/: Consol.h
include/Parser/File/: File.h
include/Reader/: Reader.h
include/Reader/Consol/: Consol.h
include/Reader/File/: File.h
include/Subtractor/: Subtractor.h
include/ThreadManager/: ThreadMnager.h
src/: Accumulator.cpp  Calculator.cpp  Client.cpp  Consol.cpp  Divider.cpp  File.cpp  Interface.cpp  Multiplier.cpp  Operator.cpp  Parser.cpp  Reader.cpp  Subtractor.cpp  ThreadManager.cpp  main.cpp
